dataset1235/2025-2/1153765216/users/2357208246/executions/2747719322_1462915504.log
== RUN (2025-08-14 19:25:49)
-- CODE: 
import math
pi = math.pi
# faça seu código aqui!
comprimento_lado = float(input())
apotema = (comprimento_lado / (2 * math.tan(pi/5)))
area = (5/2) * comprimento_lado * apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:24:32)
-- CODE: 
import math
pi = math.pi
# faça seu código aqui!
comprimento_lado = float(input())
apotama = (comprimento_lado / (2 * math.tan(pi/5)))
area = (5/2) * comprimento_lado * apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:24:15)
-- CODE: 
from math import *
pi = math.pi
# faça seu código aqui!
comprimento_lado = float(input())
apotama = (comprimento_lado / (2 * math.tan(pi/5)))
area = (5/2) * comprimento_lado * apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = math.pi
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = math.pi
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = math.pi
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = math.pi
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = math.pi
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = math.pi
         ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:25:53)
-- CODE: 
import math
pi = math.pi
# faça seu código aqui!
comprimento_lado = float(input())
apotema = (comprimento_lado / (2 * math.tan(pi/5)))
area = (5/2) * comprimento_lado * apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:25:22)
-- CODE: 
import math
pi = math.pi
# faça seu código aqui!
comprimento_lado = float(input())
apotama = (comprimento_lado / (2 * math.tan(pi/5)))
area = (5/2) * comprimento_lado * apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:24:13)
-- CODE: 
from math import *
pi = math.pi
# faça seu código aqui!
comprimento_lado = float(input())
apotama = (comprimento_lado / (2 * math.tan(pi/5)))
area = (5/2) * comprimento_lado * apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = math.pi
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = math.pi
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = math.pi
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = math.pi
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = math.pi
         ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi = math.pi
         ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:24:31)
-- CODE: 
import math
pi = math.pi
# faça seu código aqui!
comprimento_lado = float(input())
apotama = (comprimento_lado / (2 * math.tan(pi/5)))
area = (5/2) * comprimento_lado * apotema

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (5/2) * comprimento_lado * apotema
                                      ^^^^^^^
NameError: name 'apotema' is not defined. Did you mean: 'apotama'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
